# mxdream

./: .gitignore  Info.plist  Info.plist.in  Makefile.am  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  config.h  config.h.in~  configure.ac  configure~
build-arm64/: Makefile  config.status  lxdream.1
build-arm64/lxdream.app/Contents/: Info.plist
build-arm64/po/: Makefile  Makefile.in  POTFILES
build-arm64/src/: Makefile  lxdream_dummy.lo  version.c
build-arm64/src/.deps/: asic.Po  bios.Po  bootstrap.Po  config.Po  cpu.Po  dcload.Po  display.Po  dreamcast.Po  eventq.Po  gdbserver.Po  gdlist.Po  hotkeys.Po  ioutil.Po  (+10 more)
build-arm64/test/: Makefile
pixmaps/: mxdream.icns
po/: de.gmo  es.gmo  it.gmo  nl.gmo  pt_BR.gmo
src/: Makefile.am  Makefile.in  bios.c  checkver.pl  config.c  config.h  display.h  dreamcast.c  dreamcast.h  gdlist.c  gui.h  loader.c  lxdream.h  lxpaths.h  main.c  profiler.c  profiler.h  util.c
src/aica/: audio.c
src/cocoaui/: cocoa_cfg.m  cocoa_ctrl.m  cocoa_prefs.m  cocoa_win.m  cocoaui.h  cocoaui.m  paths_osx.m
src/drivers/: audio_osx.m  gc_osx.m  gl_fbo.c  gl_sl.c  gl_state.c  gl_state.h  video_gl.c  video_nsgl.h  video_nsgl.m
src/mxgl/: gl_fbo_patch.c  gl_fbo_patch.h  gl_sl.c  gl_state.c  gl_state.h  mx_tripwire_gl.h  mxdream_patch_config.h  present_q.c  present_q.h  video_present.c  video_present.h
src/pvr2/: debug.c  debug.h  glrender.c  pvr2.c  pvr2.h  pvr2mem.c  rendsort.c  scene.c  shaders.glsl  shaders.h  texcache.c
src/sh4/: sh4.c
src/tools/: Makefile.am  Makefile.in  genglsl.c
src/xlat/: xltcache.c
(+95 files in other folders)
